--- a/.golangci.yml
+++ b/.golangci.yml
@@ -23,13 +23,15 @@ linters-settings:
       - style
       - diagnostic
       - performance
+    disabled-checks:
+      - hugeParam
 
   errcheck:
     # report about assignment of errors to blank identifier: `num, _ := strconv.Atoi(numStr)`;
     # default is false: such cases aren't reported by default.
     check-blank: true
-  govet:
-    enable-all: true
+#  govet:
+#    enable-all: true
   revive:
     rules:
       - name: package-comments
